# lean-helix-view

./: .gitignore  Cargo.toml  LICENSE  Main.lean  README.md  flake.nix
crates/lean-helix-view/: Cargo.toml
crates/lean-helix-view/src/: main.rs
crates/lean-helix-view/tests/: failure_modes.rs  transparency.rs
crates/lhv-lsp/: Cargo.toml
crates/lhv-lsp/src/: codec.rs  envelope.rs  lib.rs
crates/lhv-proxy/: Cargo.toml
crates/lhv-proxy/src/: forward.rs  json.rs  lib.rs  query.rs  run.rs  server.rs  sink.rs  snoop.rs  state.rs  tee.rs
crates/lhv-viewer/: Cargo.toml
crates/lhv-viewer/src/: lib.rs
crates/lhv-wire/: Cargo.toml
crates/lhv-wire/src/: lib.rs
docs/: cadence-capture.md
scratch/: Scratch.lean  lake-manifest.json  lakefile.toml
