[workspace]
resolver = "2"
members = [
    "crates/lhv-lsp",
    "crates/lhv-wire",
    "crates/lhv-proxy",
    "crates/lhv-viewer",
    "crates/lean-helix-view",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Terminal-native Lean 4 infoview for Helix: a transparent LSP proxy plus a ratatui viewer"
repository = "https://github.com/wyattgill9/lean-helix-tui"
keywords = ["lean", "lean4", "helix", "lsp", "infoview"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"

# internal crates
lhv-lsp = { path = "crates/lhv-lsp" }
lhv-wire = { path = "crates/lhv-wire" }
lhv-proxy = { path = "crates/lhv-proxy" }
lhv-viewer = { path = "crates/lhv-viewer" }
